Move from java.io.File to java.nio.file classes
Update to use the new IO classes from the java.nio package instead of
the java.io.File class.